examples/test/testpolicy18901.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18901
  namespace: namespace14
spec:
  podSelector:
    matchLabels:
      key42: value11
      key21: value12
      key7: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value17
          key16: value4
          key2: value24
      podSelector:
        matchLabels:
          key18: value22
          key16: value46
